# libthanatos

./: CMakeLists.txt  README.md
include/: thanatos.h
include/thanatos/: OBColorList.h  OBDate.h  OBHierarchy.h  OBJointRefList.h  OBMaterial.h  OBMaterialList.h  OBMaterialRefList.h  OBMesh.h  OBMeshList.h  OBModel.h  OBNbd.h  OBNode.h  OBNormalList.h  OBObject.h  OBPrimLists.h  OBRenderAttribs.h  OBSld.h  OBTStripList.h  OBTStripMaterialList.h  OBTexCoordList.h  OBTextureList.h  OBTypes.h  OBVertexList.h  OBWeightList.h
src/: OBColorList.cpp  OBDate.cpp  OBHierarchy.cpp  OBJointRefList.cpp  OBMaterial.cpp  OBMaterialList.cpp  OBMaterialRefList.cpp  OBMesh.cpp  OBMeshList.cpp  OBModel.cpp  OBNbd.cpp  OBNode.cpp  OBNormalList.cpp  OBObject.cpp  OBPrimLists.cpp  OBRenderAttribs.cpp  OBSld.cpp  OBTStripList.cpp  OBTStripMaterialList.cpp  OBTexCoordList.cpp  OBTextureList.cpp  OBTypes.cpp  OBVertexList.cpp  OBWeightList.cpp
